--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <h1 onclick="location.href='index.html'">Ментор <span style="color: red;">МПГУ</span></h1>
+    <div class="navbar">
+        <div class="navbar-links">
+            <div class="navbar-link">
+                <a href="about.html">О проекте</a>
+            </div>
+            <div class="navbar-link">
+                <a href="journal.html">Журнал</a>
+            </div>
+            <div class="navbar-link">
+                <a href="participants.html">Участники</a>
+            </div>
+            <div class="navbar-link">
+                <a href="res.html">Ресурсы</a>
+            </div>
+        </div>
+        <div class="navbar-img" onclick="location.href='index.html'">
+            <img src="log.png">
+        </div>
+    </div>
+    <main>
+        <p><span style="color: red">Ментор МГПУ</span> - проект, направленный на создание дистанционного наставника
+            (нейросети) для помощи молодым
+            преподавателям,
+            которые смогут консультироваться у него: узнать план построение урока, спросить, как замотивировать учеников
+            учиться,
+            как найти подход к “особенному” ученику и тому подобное.</p>
+        <p style="color: red; font-size: 20px;">Коротко о заказчике</p>
+        <p>
+            Наш заказчик - <a href="https://www.mgpu.ru/" style="color: red;">ГАОУ ВО МГПУ</a>
+        </p>
+        <p>
+            Московский городской  университет МГПУ — государственный вуз Москвы, ведущий педагогический университет
+            страны, входит в
+            топ-20 вузов России по качеству приема, в перечень лучших университетов мира по версии рейтинга QS и
+            является участником
+            государственной программы «Приоритет 2030».
+        </p>
+        <p>
+            Сегодня Университет объединяет более 40 площадок в различных частях города. В его структуру входят 12
+            институтов, 8
+            колледжей, университетская школа и даже детский сад. Филиал МГПУ открыт в Самаре.
+        </p>
+    </main>
+</body>
+
+</html>
