--- a/site/journal.html
+++ b/site/journal.html
@@ -34,7 +34,7 @@
             версия и
             десктоп).</p>
         <span style="color: grey;"><i>25.05.2025</i></span>
-        <p>Для мобильной версии (прожоление) были созданы макеты с помощью онлайн-сервиса для разработки интерфейсов и
+        <p>Для мобильной версии (приложение) были созданы макеты с помощью онлайн-сервиса для разработки интерфейсов и
             прототипирования Figma. Для стилистики приложения (для схожести стиля с основным сайта заказчика)
             ипользовались цвета и
             логотип из брендбука сайта МГПУ и некоторые статистические данные с <a href="https://mentor.mgpu.ru/">сайта
